# latent-dynamics-lab

./: .gitignore  README.md
precursors/: ekf_vs_particle_filter.py  kalman_filter.py  model_predictive_control.py  partial_observability.py
reccurent state space models/: README.md  pyproject.toml
recurrent state space models/: dataset.py  model.py  train.py  utils.py
recurrent state space models/outputs/: model.pt
sample world model/: miniverse.py  oracle_planner.py  state_estimation.py
