[project]
name = "rssm-moving-dot"
version = "0.1.0"
description = "Minimal Recurrent State-Space Model for learning latent dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.uv]
package = false
